--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -19,7 +19,8 @@
             <div class="form-control">
                 <label for="price">Price</label>
                 
-                <input type="number" name="price" id="price" step="0.01" value="<% if (edit) { %> <%=product.price %> <% } %>">
+                <input type="number" name="price" id="price" step="0.01" value=<% if (edit) { %> <%=product.price %> <% } %>>
+           
             </div>
             <div class="form-control">
                 <label for="description">Description</label>
