--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -8,15 +8,19 @@
         <ul>
             <% products.forEach(p =>{ %> 
             <li>
-                <%= p.productData.title %> (<%= p.qty%>) %> </li>
+                <%= p.title %>   (<%= p.cartItem.qty %>) %> </li>
                 <form action="/cart-delete-item" method="post">
 
-                    <input type="hidden" value="<%=p.productData.id %>" name="productId">
+                    <input type="hidden" value="<%=p.id %>" name="productId">
                     <button class="btn" type="submit">Delete</button>
 
                 </form>
             
                <% }) %> 
+
+               <form action="/create-order" method="post">
+                    <button type="submit" class="btn">Order Now!</button>
+               </form>
         </ul>
 
         
